[package]
name = "rpi-web-perf"
version = "0.1.0"
authors = ["WebeWizard <justin.leis@webewizard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["rt","macros"] }
dotenv = "0.15.0"
webe_web = { path = "../lib-webe/webe_web" }

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"